--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,6 +1,21 @@
 FROM node:18-slim
-WORKDIR "/app"
-COPY ./package.json ./
+
+WORKDIR /app
+
+RUN apt-get update && \
+    apt-get install -y \
+    libcurl4 \
+    ca-certificates \
+    openssl \
+    curl \
+    gnupg \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+COPY package*.json ./
 RUN npm install
+
 COPY . .
-CMD ["npm" ,"run" ,"dev"]
+
+ENV NODE_ENV=test
+
+CMD ["npm", "test"]
